--- a/streamlit.ipynb
+++ b/streamlit.ipynb
@@ -81,13 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f61e87-895e-4a2b-bbb7-88783b4ff6c8",
+   "id": "4e0ba006-a710-4a98-b90d-0fa322e6a503",
    "metadata": {},
    "outputs": [],
    "source": [
     "import streamlit as st\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import decimal\n",
     "import plotly.express as px\n",
     "from streamlit_option_menu import option_menu\n",
     "import mysql.connector as db\n",
@@ -108,7 +109,7 @@
     "    )\n",
     "\n",
     "df_selection=df.query(\n",
-    "    \"route_name==@BusRouteName\" # & bus_type==@BusType\"\n",
+    "    \"route_name==@BusRouteName\"\n",
     "    )\n",
     "\n",
     "def Home():    \n",
@@ -134,38 +135,101 @@
     "\n",
     "    st.markdown(\"\"\"---\"\"\")\n",
     "\n",
+    "def details(df_selection):\n",
+    "    col1,col2,col3,col4=st.columns(4, gap='large')\n",
+    "    with col1:\n",
+    "        bustype = st.selectbox(\"Select your bus type\", options=[\"None\"] + df_selection[\"bus_type\"].unique().tolist())\n",
+    "        if bustype is \"None\":\n",
+    "            df_selection = df_selection\n",
+    "        else:\n",
+    "            df_selection = df_selection[df_selection[\"bus_type\"] == bustype]\n",
+    "        st.write(\"You selected: \", bustype)\n",
+    "    with col2:\n",
+    "        df_selection['departing_time'] = df_selection['departing_time'].astype(str)\n",
+    "        df_selection['departing_time'] = df_selection['departing_time'].str.extract(r\"(\\d{2}:\\d{2}:\\d{2})\")\n",
+    "        df_selection['reaching_time'] = df_selection['reaching_time'].astype(str)\n",
+    "        df_selection['reaching_time'] = df_selection['reaching_time'].str.extract(r\"(\\d{2}:\\d{2}:\\d{2})\")\n",
+    "        departingtime = st.selectbox(\"Select departing time\", options = [\"None\"] + df_selection[\"departing_time\"].unique().tolist())\n",
+    "        if departingtime is \"None\":\n",
+    "            df_selection = df_selection\n",
+    "        else:\n",
+    "            df_selection = df_selection[df_selection[\"departing_time\"] == departingtime]\n",
+    "        st.write(\"You selected: \", departingtime)\n",
     "\n",
+    "    with col3:\n",
+    "        df_selection[\"price\"] = pd.to_numeric(df_selection[\"price\"])\n",
+    "        price = st.selectbox(\"Price range in Rs : \", options = (\"None\", \"100 - 300\", \"300 - 500\", \"500 - 700\", \"700 - 1000\", \"1000 above\"))\n",
+    "        if price is \"None\":\n",
+    "            df_selection = df_selection\n",
+    "        if price == \"100 - 300\":\n",
+    "            df_selection = df_selection[(df_selection[\"price\"] > decimal.Decimal(\"100\")) & (df_selection[\"price\"] <= decimal.Decimal(\"300\"))]\n",
+    "\n",
+    "        if price == \"300 - 500\":\n",
+    "            df_selection = df_selection[(df_selection[\"price\"] > decimal.Decimal(\"300\")) & (df_selection[\"price\"] <= decimal.Decimal(\"500\"))]\n",
+    "\n",
+    "        if price == \"500 - 700\":\n",
+    "            df_selection = df_selection[(df_selection[\"price\"] > decimal.Decimal(\"500\")) & (df_selection[\"price\"] <= decimal.Decimal(\"700\"))]\n",
+    "\n",
+    "        if price == \"700 - 1000\":\n",
+    "            df_selection = df_selection[(df_selection[\"price\"] > decimal.Decimal(\"700\")) & (df_selection[\"price\"] <= decimal.Decimal(\"1000\"))]\n",
+    "\n",
+    "        if price == \"1000 above\":\n",
+    "            df_selection = df_selection[df_selection[\"price\"] > decimal.Decimal(\"1000\")]\n",
+    "        st.write(\"You selected: \", price)\n",
+    "        \n",
+    "    with col4:\n",
+    "        starrating = st.selectbox(\"Star Rating : \", options=[\"None\", \"⭐️⭐️⭐️⭐️⭐️\", \"⭐️⭐️⭐️⭐️\", \"⭐️⭐️⭐️\", \"⭐️⭐️\", \"⭐️\"])\n",
+    "        if starrating is \"None\":\n",
+    "            df_selection = df_selection\n",
+    "        if starrating == \"⭐️⭐️⭐️⭐️⭐️\":\n",
+    "            df_selection = df_selection[df_selection[\"star_rating\"] == 5]\n",
+    "\n",
+    "        if starrating == \"⭐️⭐️⭐️⭐️\":\n",
+    "            df_selection = df_selection[(df_selection[\"star_rating\"] >= 4) & (df_selection[\"star_rating\"] < 5)]\n",
+    "\n",
+    "        if starrating == \"⭐️⭐️⭐️\":\n",
+    "            df_selection = df_selection[(df_selection[\"star_rating\"] >= 3) & (df_selection[\"star_rating\"] < 4)]\n",
+    "\n",
+    "        if starrating == \"⭐️⭐️\":\n",
+    "            df_selection = df_selection[(df_selection[\"star_rating\"] >= 2) & (df_selection[\"star_rating\"] < 3)]\n",
+    "\n",
+    "        if starrating == \"⭐️\":\n",
+    "            df_selection = df_selection[df_selection[\"star_rating\"] < 2]\n",
+    "        st.write(\"You selected: \", starrating)\n",
+    "\n",
+    "    return df_selection\n",
+    "    \n",
     "def table():\n",
     "    with st.expander(\"My Redbus Database\"):\n",
-    "        shwdata=st.multiselect(\"Filter Dataset\", df_selection.columns, default= [\"bus_name\", \"bus_type\", \"departing_time\", \"duration\",\"reaching_time\",\"star_rating\",\"price\",\"seats_available\"])\n",
+    "        shwdata=st.multiselect(\"Filter Dataset\", df_selection.columns, default= [\"bus_name\", \"bus_type\", \"departing_time\", \"reaching_time\",\"star_rating\",\"price\",\"seats_available\"])\n",
     "        st.dataframe(df_selection[shwdata], use_container_width = True)\n",
     "\n",
     "\n",
     "with st.sidebar:\n",
     "    menu = option_menu(\n",
     "                menu_title = \"Explore\",\n",
-    "                options = [\"Home\",\"Route Links\", \"Dashboard\", \"Popular Cities\"],\n",
+    "                options = [\"Home\", \"Dashboard\", \"Route Links\", \"Customer Service\"],\n",
     "                styles = {\n",
-    "                    \"nav-link-selected\": {\"background-color\": \"red\"}\n",
+    "                    \"nav-link-selected\": {\"background-color\": \"#FF4B4B\"}\n",
     "                }\n",
     "    )\n",
     "if menu==\"Home\":\n",
     "    Home()\n",
+    "    df_selection = details(df_selection)\n",
     "    table()\n",
     "    \n",
-    "if menu==\"Route Links\":\n",
-    "    st.subheader(\"You selected Route Links\")\n",
-    "    result1 = link()\n",
-    "    col = [i[0] for i in curr.description]\n",
-    "    data = pd.DataFrame(result1, columns= col)\n",
-    "\n",
-    "    st.dataframe(data, column_config={\"route_link\": st.column_config.LinkColumn()})\n",
-    "\n",
     "if menu==\"Dashboard\":\n",
-    "    Price_by_bus_route= (df_selection.groupby(by=[\"route_name\"]).count()[[\"price\"]].sort_values(by=\"price\"))\n",
-    "    fig_price=px.bar(\n",
-    "        Price_by_bus_route,x=\"price\",y=Price_by_bus_route.index, orientation=\"h\",\n",
-    "        title=\"Price by Bus Routes\",\n",
+    "    Price_by_bus_route = (\n",
+    "        df_selection.groupby(by=[\"route_name\"])\n",
+    "        .agg({\"price\": \"max\"})\n",
+    "        .sort_values(by=\"price\", ascending=True)\n",
+    "    )\n",
+    "    fig_price = px.bar(\n",
+    "        Price_by_bus_route,\n",
+    "        x=\"price\",\n",
+    "        y=Price_by_bus_route.index,\n",
+    "        orientation=\"h\",\n",
+    "        title=\"Price by Bus Routes (Sorted)\",\n",
     "        template=\"plotly_white\",\n",
     "        color_discrete_sequence=px.colors.qualitative.Pastel,\n",
     "    )\n",
@@ -180,8 +244,32 @@
     "    left,right=st.columns(2)\n",
     "    left.plotly_chart(fig_price,use_container_width=True)\n",
     "    right.plotly_chart(fig_scatter,use_container_width=True)\n",
+    "    st.markdown(\"\"\"---\"\"\")\n",
     "\n",
-    "if menu == \"Popular Cities\":\n",
+    "    fig2= px.pie(\n",
+    "        df_selection,\n",
+    "        names=\"bus_type\",\n",
+    "        values=\"seats_available\",\n",
+    "        title=\"Type of Buses wise Seat Availability\",\n",
+    "        color_discrete_sequence=px.colors.sequential.Viridis,\n",
+    "        hole=0.4  # Adjust the hole size as needed\n",
+    "    )\n",
+    "    \n",
+    "    st.plotly_chart(fig2,use_container_width=True)\n",
+    "\n",
+    "\n",
+    "if menu==\"Route Links\":\n",
+    "    st.subheader(\"You selected Route Links\")\n",
+    "    result1 = link()\n",
+    "    col = [i[0] for i in curr.description]\n",
+    "    data = pd.DataFrame(result1, columns= col)\n",
+    "\n",
+    "    st.dataframe(data, column_config={\"route_link\": st.column_config.LinkColumn()})\n",
+    "    \n",
+    "    st.markdown(\"\"\"---\"\"\")\n",
+    "\n",
+    "    st.subheader(\"Popular Cities\")\n",
+    "\n",
     "    popular_cities_data = get_popular_cities()\n",
     "    popular_cities_df = pd.DataFrame(popular_cities_data, columns= [i[0] for i in curr.description])\n",
     "    popular_cities_df = popular_cities_df.sort_values(by='route_name_count', ascending=False)\n",
@@ -205,16 +293,31 @@
     "    # Display the donut chart\n",
     "    st.plotly_chart(fig,use_container_width=True)\n",
     "\n",
-    "    fig2= px.pie(\n",
-    "        df_selection,\n",
-    "        names=\"bus_type\",\n",
-    "        values=\"price\",\n",
-    "        title=\"Type of Buses wise Pricing\",\n",
-    "        color_discrete_sequence=px.colors.sequential.Viridis,\n",
-    "        hole=0.4  # Adjust the hole size as needed\n",
-    "    )\n",
+    "if menu == \"Customer Service\":\n",
     "    \n",
-    "    st.plotly_chart(fig2,use_container_width=True)\n",
+    "    st.subheader(\"Write us your desired city which you couldn't find\")\n",
+    "    name = st.text_input(\"Enter your Name\")\n",
+    "    email = st.text_input(\"Enter your Email\")\n",
+    "    origincity = st.text_input(\"Enter your origin city\")\n",
+    "    destcity = st.text_input(\"Enter your destination city\")\n",
+    "    bustype = st.text_input(\"Enter your desired bus type\")\n",
+    "    if st.button(\"Submit\"):\n",
+    "        result2 = users(name, email, origincity, destcity, bustype)\n",
+    "        st.success(\"Thank you for letting us know, check your email for the update on this!\")\n",
+    "    \n",
+    "    \n",
+    "    st.subheader(\"Users desired cities which we will be updating soon\")\n",
+    "    result = update()\n",
+    "    for row in result:\n",
+    "        st.write(row)\n",
+    "    st.markdown(\"\"\"---\"\"\")\n",
+    "    \n",
+    "    st.caption(\"Rate your experience! (1 star: Needs Improvement - 5 stars: Excellent)\")\n",
+    "    rating = st.radio(\"Choose your rating:\", (\"Needs Improvement\", \"Okay\", \"Good\", \"Very Good\", \"Excellent\"))\n",
+    "    if st.button(\"Submit Feedback\"):\n",
+    "        st.write(f\"Thanks for your feedback! You selected {rating}.\")\n",
+    "        store_feedback(rating)\n",
+    "    \n",
     "\n",
     "    \n"
    ]
